plugins {
    id 'com.android.application'
}

allprojects {
    repositories {
        maven { url "https://jitpack.io" }
        maven { url 'https://raw.githubusercontent.com/ryuunoakaihitomi/maven-repository/master' }
    }

    tasks.withType(JavaCompile) {
        options.compilerArgs << "-Xlint:deprecation"
    }
}

android {
    compileSdkVersion 31
    buildToolsVersion "30.0.3"

    def localProperties = new Properties()
    localProperties.load(new FileInputStream(rootProject.file("local.properties")))

    def secretProperties = new Properties()
    secretProperties.load(new FileInputStream(rootProject.file("secret.properties")))

    signingConfigs {
        release {
            keyAlias localProperties['alias']
            keyPassword localProperties['password']
            storeFile file(localProperties['keystore'])
            storePassword localProperties['password']
        }
    }

    defaultConfig {
        applicationId "com.musicslayer.cryptobuddy"
        minSdkVersion 16 // Minimum needed for some libraries we depend on.
        targetSdkVersion 31
        versionCode 13
        versionName "1.5"

        multiDexEnabled true
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        vectorDrawables.useSupportLibrary = true

        buildConfigField("String", "key_oauth_code", secretProperties['key_oauth_code'])
        buildConfigField("String", "key_oauth_token", secretProperties['key_oauth_token'])

        buildConfigField("String", "ad_application_id", secretProperties['ad_application_id'])
        manifestPlaceholders = [ad_application_id: secretProperties["ad_application_id"].substring(1, secretProperties["ad_application_id"].length() - 1)] // Trim off extra quotes

        buildConfigField("String", "ad_unit_id_test", secretProperties['ad_unit_id_test'])
        buildConfigField("String", "ad_unit_id_real", secretProperties['ad_unit_id_real'])

        buildConfigField("String", "binance_client_id", secretProperties['binance_client_id'])
        buildConfigField("String", "binance_client_secret", secretProperties['binance_client_secret'])
        buildConfigField("String", "binance_us_client_id", secretProperties['binance_us_client_id'])
        buildConfigField("String", "binance_us_client_secret", secretProperties['binance_us_client_secret'])
        buildConfigField("String", "coinbase_client_id", secretProperties['coinbase_client_id'])
        buildConfigField("String", "coinbase_client_secret", secretProperties['coinbase_client_secret'])
        buildConfigField("String", "stex_client_id", secretProperties['stex_client_id'])
        buildConfigField("String", "stex_client_secret", secretProperties['stex_client_secret'])
    }

    buildTypes {
        // TEST
        debug {
        }
        release {
            signingConfig signingConfigs.release
            debuggable true
        }

/*
        // REAL
        debug {
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
        release {
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.release

            ndk {
                debugSymbolLevel 'FULL'
            }
        }

 */
    }
    compileOptions {
        coreLibraryDesugaringEnabled true
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    sourceSets {
        main {
            res {
                srcDirs 'src\\main\\res'
            }
        }
    }
}

dependencies {
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
    implementation 'androidx.appcompat:appcompat:1.4.1'
    implementation 'androidx.browser:browser:1.4.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
    implementation 'androidx.navigation:navigation-fragment:2.3.5'
    implementation 'androidx.navigation:navigation-ui:2.3.5'
    //noinspection GradleDependency
    implementation 'commons-io:commons-io:2.4' // Keep this at 2.4 so we can support older android versions.
    implementation 'com.android.billingclient:billing:4.0.0'
    implementation 'com.android.support:multidex:1.0.3'
    implementation 'com.github.kenglxn.QRGen:android:2.6.0'
    implementation 'com.github.stellar:java-stellar-sdk:0.26.0'
    implementation 'com.google.android.gms:play-services-ads:20.5.0'
    implementation 'com.google.android.gms:play-services-auth:20.0.1'
    implementation 'com.google.android.gms:play-services-vision:20.1.3'
    implementation 'com.google.android.material:material:1.5.0'
    implementation "org.java-websocket:Java-WebSocket:1.5.1"
    runtimeOnly 'github.ryuunoakaihitomi.retoast:retoast:1.7.0'
    testImplementation 'junit:junit:4.13.2'
}